--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "ext-krb5": "*",
 
         "simplesamlphp/composer-module-installer": "~1.1",
-        "simplesamlphp/simplesamlphp": "dev-master",
+        "simplesamlphp/simplesamlphp": "^1.19",
         "simplesamlphp/simplesamlphp-module-ldap": "^1.2"
     },
     "require-dev": {
